Segunda Version creacion de Verdedores y Listado de vendedores

--- a/front-end/src/app/menu/menu.component.html
+++ b/front-end/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>
-    <a mat-button routerLink="">
+    <a mat-button routerLink="/vendedores">
       Vendedores
     </a>
     <a mat-button routerLink="/ciudades">
