--- a/front-end/src/app/vendedores/crear-vendedor/crear-vendedor.component.html
+++ b/front-end/src/app/vendedores/crear-vendedor/crear-vendedor.component.html
@@ -1,1 +1,2 @@
-<p>crear-vendedor works!</p>
+<h2>Crear Ciudad</h2>
+<app-formulario-vendedor (onSubmit)="guardarCambiosCiudad($event)"></app-formulario-vendedor>
