tercera Version tanto para Front-end como para Back-end.

--- a/front-end/src/app/vendedores/crear-vendedor/crear-vendedor.component.html
+++ b/front-end/src/app/vendedores/crear-vendedor/crear-vendedor.component.html
@@ -1,2 +1,2 @@
 <h2>Crear Ciudad</h2>
-<app-formulario-vendedor (onSubmit)="guardarCambiosCiudad($event)"></app-formulario-vendedor>
+<app-formulario-vendedor (onSubmit)="guardarCambiosVendedor($event)"></app-formulario-vendedor>
