--- a/front-end/src/app/vendedores/listado-vendedor/listado-vendedor.component.html
+++ b/front-end/src/app/vendedores/listado-vendedor/listado-vendedor.component.html
@@ -28,13 +28,13 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let vendedor">
-                <a routerLink="/editarvendedor/{{vendedor.id}}" mat-flat-button color="primary">Editar</a>    
+                <a routerLink="/editarVendedores/{{vendedor.id}}" mat-flat-button color="primary">Editar</a>    
                 
                 <button mat-flat-button color="warn" 
                 [swal]="{title: 'Confirmacion de Eliminacion',
                 text: '¿Esta seguro de Eliminar este Registro?',
                 showCancelButton: true}"      
-                (confirm)="borrarvendedor(vendedor.id)">Eliminar</button> 
+                (confirm)="borrarVendedor(vendedor.id)">Eliminar</button> 
             </td>
         </ng-container>
 
